src/pages/Home/index.css
a {
  text-decoration: none;
  color: inherit;
}

.header {
  width: 100%;
  display: flex;
  align-items: center;
  position: absolute;
  top: 0;
}

.header-content {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  padding: 10px;
}

.home {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 20px;
}

.menu-icon {
  cursor: pointer;
}

.menu {
  position: fixed;
  top: 0;
  left: -100%; /* Start off-screen */
  width: 100%;
  height: 100%;
  background-color: #191919;
  z-index: 10;
  transition: left 0.3s ease; /* Smooth slide effect */
}

.menu-visible {
  left: 0; /* Slide into view */
}

.menu-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  padding: 20px;
  box-sizing: border-box;
}

.menu-container {
  display: flex;
  flex: 5;
  flex-direction: column;
  justify-content: center;
  align-items: baseline;
  gap: 48px;
  width: 100%;
}

.menu-footer {
  width: 100%;
  display: flex;
  flex: 1;
}

.menu-footer-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}

.menu-item {
  font-size: 24px;
  align-items: center;
  display: flex;
  flex-direction: row;
  gap: 15px;
  cursor: pointer;
  width: 100%;

  background: transparent;
  border: 0;
  color: #ffffff;
  padding: 0;
}

.menu-footer .menu-item {
  height: 100%;
}

.footer {
  width: 100%;
  position: absolute;
  font-size: 11px;
  color: #989899;
  bottom: 0;
}

.footer-content {
  display: flex;
  flex-direction: row;
  justify-content: center;
  box-sizing: border-box;
  align-items: center;
  width: 100%;
  height: 100%;
  padding: 10px;
}

.stats-container {
  width: 100%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  font-size: 10px;
}

.loading-spinning {
  animation: spinAnimation 2s linear infinite;
}

@keyframes spinAnimation {
  from {
    transform: rotate(360deg);
  }
  to {
    transform: rotate(0deg);
  }
}

h1 span {
  color: #8da8ff;
}

.title {
  margin: 0;
}

.connection {
  text-align: center;
  background-color: #22262d;
  border: 1px solid #474648;
  border-radius: 16px;
  padding: 4px 16px;
  font-size: 14px;
  margin: 0;
}

.connection span {
  color: #9fbfe5fe;
}

.power {
  width: 144px;
  height: 144px;
  background-image: radial-gradient(#282930 50%, #585757 100%);
  outline: none;
  border: none;
  border-radius: 50%;
  cursor: pointer;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  position: relative;
  z-index: 5;
}

.not-connected,
.connected {
  font-weight: 700;
  margin: 0;

  text-align: center;
}

.connected {
  color: #ffffff;
}

.auto-btn {
  background-color: transparent;
  color: white;
  display: flex;
  align-items: center;
  border: none;
  gap: 10px;
  font-weight: 700;
  cursor: pointer;
}

.home-location {
  color: #b1b1b2;
  font-size: 11px;
  margin: 0;
  text-align: center;
}

.region-btn {
  display: flex;
  justify-content: space-between;
  align-items: center;
  border: 1px solid white;
  border-radius: 32px;
  padding: 16px;
  background-color: transparent;
  height: 56px;
  cursor: pointer;
  gap: 12px;
  position: relative;
  z-index: 5;
}

.region-btn div {
  display: flex;
  align-items: center;
  gap: 10px;
  color: white;
}

.auto-select-btn {
  width: 318px;
  height: 76px;
  display: flex;
  justify-content: space-between;
  background-color: #ffffff1f;
  align-items: center;
  border: none;
  color: white;
  padding: 16px 30px;
  border-radius: 16px;
  cursor: pointer;
}

.auto-select-btn div p:nth-child(2) {
  font-size: 11px;
  color: #b1b1b2;
}

.rs-wrapper {
  width: 70%;
}

.rs-wrapper > p {
  color: #e4e2e4;
  margin-bottom: 16px;
  font-size: 11px;
  text-align: center;
}

.region-selector {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 16px;
}

.current-wallet {
  display: flex;
  align-items: center;
  gap: 16px;
}

.current-wallet > p {
  font-weight: 700;
  width: initial;
}

.current-wallet p {
  margin: 0;
}

.current-wallet button {
  background: 0;
  border: 0;

  display: flex;
  align-items: center;
  gap: 8px;

  color: #9fbfe5;

  cursor: pointer;

  margin-top: 2px;
}

.current-wallet img {
  width: 16px;
  height: 16px;

  margin-bottom: 2px;
}

.current-mined {
  display: flex;
  align-items: center;
  gap: 8px;

  padding-top: 24px;
}

.current-mined p {
  width: initial;
  margin: 0;
}

.current-mined p:first-child {
  font-size: 32px;
}

.welcome {
  display: flex;
  flex-direction: column;
}

/* .welcome p {
  margin: 0;
  text-align: center;
}

.welcome p:first-child {
  font-size: 24px;
  font-weight: 700;
}

.welcome p:first-child span {
  color: #9FBFE5FE;
}

.welcome p:last-child {
  font-size: 11px;
} */

.auto-rs-power {
  background: #D7E5F01F;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  padding: 16px;
  border-radius: 16px;
}

.auto-rs-power p {
  margin: 0;
}

.auto-rs-power div p:first-child {
  font-weight: 700;
  margin-bottom: 4px;
}

.auto-rs-power div p:last-child {
  font-size: 12px;
  color: #B1B1B2;
}

